# qt3-utils

./: .gitignore  2023-05-19 Mordi Data.pkl  2023-05-19 Mordi_Data.pkl  LICENSE  README.md  environment.yml  oscilloscope.py  pyproject.toml  qt3_specscan.yml  setup.py
.github/workflows/: python-publish.yml
docs/: ExperimentsDoc.md
examples/: confocal-scan-random-and-hyperdaq.ipynb  confocal-scan.ipynb  default_cwodmr.ipynb  default_podmr.ipynb  default_rabi.ipynb  default_ramsey.ipynb  detail_scan_ppm_0.034mW_x_8_to_24_y_10_to_28.npy  dpg11_pulser_examples.ipynb  hyper-scan.ipynb  hyperscan.py  load_saved_piezoscan.ipynb  ppm_sample_oct4_2022_1mW.pickle  ppm_sample_scan.npy  programmatic_hyper-spectral-image.ipynb  pulse_blaster_testing.ipynb  random_example_scan.npy  testing_MW_switch.ipynb
hyperspectral_scripts/: asher_20230526_00.pkl  asher_20230526_01.pkl  asher_20230526_corner.pkl  asher_20230526_test.pkl  asher_hs_data_acquisition.py  princeton.py  test.pkl
src/applications/: PLEscan.py  hypergui.py  hypergui_new.py  oscilloscope.py  piezoscan.py  plescan.py  qt3scope.py  qt3spectralscan.py
src/qt3utils/: __init__.py  errors.py  logger.py  logger_config.yaml  math_utils.py
src/qt3utils/amplifiers/: minicircuits.py
src/qt3utils/analysis/: aggregation.py  rabi.py
src/qt3utils/applications/: piezoscan.py
src/qt3utils/applications/controllers/: andor_spectrometer.py  andor_spectrometer.yaml  lockin_controller.py  nidaq_edge_counter.yaml  nidaq_rate_counter.yaml  nidaq_wm_ple.yaml  (+12 more)
src/qt3utils/datagenerators/: PLEscanner.py  __init__.py  daqsamplers.py  hypergui.py  hyperscan.py  piezoscanner.py  plescanner.py  princeton.py  princeton_scanner.py  princeton_spectrometers.py  princeton_test.py  pscanner.py  pscanner_test.py  scan_test.py  spe_filereader.py  spec_test.py
src/qt3utils/devices/: acquisition.py  devices.py  powermeters.py  random.py  utils.py
src/qt3utils/experiments/: common.py  cwodmr.py  podmr.py  rabi.py  ramsey.py  t1coherence.py
src/qt3utils/nidaq/: config.py  customcontrollers.py
src/qt3utils/programs/: oscilloscope.py
src/qt3utils/pulsers/: dpg11.py  pulseblaster.py  qcsapphire.py
src/qt3utils/temp/: README.md  oscilloscope.py  qcsapphire_hold_open.py  show_usb_devices.py
(+23 files in other folders)
